--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
-{
   "name": "portal-de-notas-delp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "Portal de Notas Delp",
+  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
-    "recharts": "^3.6.0",
-    "react-dom": "^19.2.3",
     "@google/genai": "^1.35.0",
-    "react": "^19.2.3"
+    "dotenv": "^16.4.5",
+    "express": "^5.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
-  }
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
